--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ title: Интернет
 description: Мини-сайт с категориями ссылок на API и ресурсы
 theme: jekyll-theme-minimal
 paginate: 5
+collections:
+  categories:
+    output: true
