--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,8 @@
 title: Интернет
 description: Мини-сайт с категориями ссылок на API и ресурсы
-theme: null
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 paginate: 5
 collections:
   categories:
