--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,11 @@
 title: Интернет
-description: Мини-сайт с категориями ссылок на API и ресурсы
+description: Ccылки на API ресурсов по категориям
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-sitemap
+  - jemoji
+  - jekyll-mentions
 paginate: 5
 collections:
   categories:
